--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="c_programming.html">C Programming</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -39,6 +38,8 @@
             <li><a href="programming_concepts.html">Programming Concepts and Logics</a></li>
             <li><a href="web_technology.html">Web Technology I</a></li>
             <li><a href="multimedia.html">Multimedia</a></li>
+            <li><a href="cyber_security.html">Cyber Security</a></li>
+            <li><a href="c_programming.html">C-Programming</a></li>
         </ol>
     </section>
 
