--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
     <section>
         <h2>Contact Information</h2>
         <ul>
-            <li><strong>Email:</strong> support@csxi.com</li>
-            <li><strong>Phone:</strong> +123 456 7890</li>
-            <li><strong>Address:</strong> 123 Computer Science Lane, Tech City</li>
+            <li><strong>Email:</strong> emanuelshrestha7@gmail.com</li>
+            <li><strong>Phone:</strong> +977 9827622415</li>
+            <li><strong>Address:</strong> Pulchowk, Lalitpur</li>
         </ul>
     </section>
     
