--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><a href="multimedia.html">Multimedia</a></li>
             <li><a href="cyber_security.html">Cyber Security</a></li>
             <li><a href="c_programming.html">C-Programming</a></li>
+            <li><a href="c_question.html">Questions</a></li>
         </ol>
     </section>
 
