--- a/courses.html
+++ b/courses.html
@@ -53,6 +53,10 @@
                 <a href="multimedia.html">Multimedia</a>
                 <p class="course-description">Explore the creation and manipulation of multimedia content, including images, audio, and video.</p>
             </li>
+            <li class="course-item">
+                <a href="c_question.html">C Programming Questions</a>
+                <p class="course-description">Practice and master essential C programming concepts with a variety of thought-provoking questions and exercises.</p>
+            </li>            
         </ol>
     </section>
 </body>
