--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section>
         <h2>Courses</h2>
-        <ol>
+        <ol class="courses">
             <li><a href="computer_system.html">Computer System</a></li>
             <li><a href="number_system.html">Number System and Conservation Boolean Logic</a></li>
             <li><a href="software_os.html">Computer Software and Operating System</a></li>
