--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     
     <section>
         <h2>Contact Information</h2>
-        <ul>
+        <ul class="info">
             <li><strong>Email:</strong> emanuelshrestha7@gmail.com</li>
             <li><strong>Phone:</strong> +977 9827622415</li>
             <li><strong>Address:</strong> Pulchowk, Lalitpur</li>
