--- a/about.html
+++ b/about.html
@@ -25,12 +25,13 @@
     
     <section>
         <h1>Our Mission</h1>
-        <p class="paragraph">At Computer Science XI, we aim to provide comprehensive resources for students to master the fundamentals of computing. Our platform offers structured learning materials, practical exercises, and real-world applications to help students excel in programming, web development, and core computer science concepts.</p>
+        <p class="paragraph">Our mission is to provide a comprehensive platform for students and learners to access well-organized, clear, and reliable notes. We aim to make learning efficient and enjoyable by offering resources that simplify complex concepts and foster a deeper understanding of various subjects. Through innovation, collaboration, and accessibility, our goal is to empower learners to achieve academic excellence and unlock their full potential.
+            </p>
     </section>
     
     <section>
         <h2>Why Choose Us?</h2>
-        <ul>
+        <ul class="choose">
             <li>Structured lessons based on the Grade XI curriculum.</li>
             <li>Detailed explanations of core computer science concepts.</li>
             <li>Interactive programming exercises and coding challenges.</li>
